Fix: Adjust sidebar spacing on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -899,21 +899,28 @@ h3.my-profession {
       max-width: 80%;
     }
     .home-img::before,
-    .home-img::after {
-      width: 50px;
-      height: 50px;
-      border-width: 6px;
-}
-
-  .home-img::after {
-      right: 10px;
-      bottom: -20px;
+.home-img::after {
+    content: '';
+    position: absolute;
+    width: 30px;
+    height: 30px;
+    border: 3px solid var(--skin-color);
 }
 
 .home-img::before {
-  left: -10px;
-  top: -20px;
+    border-right: none;
+    border-bottom: none;
+    top: -15px;
+    left: -15px;
 }
+
+.home-img::after {
+    border-left: none;
+    border-top: none;
+    bottom: -15px;
+    right: -15px;
+}
+
 
     .home .home-img img {
       max-width: 100%;
